@@ -1,3 +1,4 @@
+
 - use vips_resize() in vipsthumbnail?
 
   should the sharpening filter be selectable?
