@@ -12,9 +12,6 @@ vipsthumbnail_SOURCES = vipsthumbnail.c
 AM_CPPFLAGS = -I${top_srcdir}/libvips/include @VIPS_CFLAGS@ @VIPS_INCLUDES@
 AM_LDFLAGS = @LDFLAGS@ 
 LDADD = @VIPS_CFLAGS@ ${top_builddir}/libvips/libvips.la @VIPS_LIBS@
-if ENABLE_CXX
-LDADD += @VIPS_CXX_LIBS@
-endif
 
 bin_SCRIPTS = \
 	light_correct \
