@@ -2,6 +2,7 @@
 - bump version for back-compat ABI change
 - added vips_image_memory(), an alias for vips_image_new_memory()
 - improvements to configure for python
+- remove --disable-cxx configure flag
 
 30/12/14 started 7.42.2
 - C++ required output params were broken, thanks Lovell
